WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199846
Unable to tap buttons at top of Wells Fargo app’s Payees screen
https://bugs.webkit.org/show_bug.cgi?id=199846
Summary
Unable to tap buttons at top of Wells Fargo app’s Payees screen
alan
Reported
2019-07-16 18:58:02 PDT
<
rdar://problem/48112220
>
Attachments
Patch
(5.54 KB, patch)
2019-07-16 19:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.20 KB, patch)
2019-07-17 14:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.27 KB, patch)
2019-07-17 14:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-07-16 19:21:44 PDT
Created
attachment 374271
[details]
Patch
alan
Comment 2
2019-07-17 14:26:19 PDT
Created
attachment 374330
[details]
Patch
Simon Fraser (smfr)
Comment 3
2019-07-17 14:31:37 PDT
Comment on
attachment 374330
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374330&action=review
> Source/WebCore/page/ios/FrameIOS.mm:390 > +Node* Frame::approximateNodeAtViewportLocationLegacy(const FloatPoint& viewportLocation, FloatPoint& adjustedViewportLocation)
Say this is only used for UIWebView in a comment.
alan
Comment 4
2019-07-17 14:41:53 PDT
Created
attachment 374332
[details]
Patch
WebKit Commit Bot
Comment 5
2019-07-17 15:32:11 PDT
The commit-queue encountered the following flaky tests while processing
attachment 374332
[details]
: http/tests/IndexedDB/collect-IDB-objects.https.html
bug 199881
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2019-07-17 15:32:21 PDT
The commit-queue encountered the following flaky tests while processing
attachment 374332
[details]
: storage/indexeddb/dont-wedge.html
bug 199883
(authors:
beidson@apple.com
,
commit-queue@webkit.org
,
dgrogan@chromium.org
, and
mark.lam@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2019-07-17 16:01:26 PDT
Comment on
attachment 374332
[details]
Patch Clearing flags on attachment: 374332 Committed
r247541
: <
https://trac.webkit.org/changeset/247541
>
WebKit Commit Bot
Comment 8
2019-07-17 16:01:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug