Unable to tap buttons at top of Wells Fargo app’s Payees screen https://bugs.webkit.org/show_bug.cgi?id=199846 <rdar://problem/48112220>

Reviewed by Simon Fraser.

Source/WebCore:

This patch restores the stop-before-reaching-the-body heuristics for the approximate node finding feature only.
(WebFrame::approximateNodeAtViewportLocation mistakenly relied on this odd quirk of nodeRespondingToClickEvents.)

* page/Frame.h:
* page/ios/FrameIOS.mm:
(WebCore::Frame::approximateNodeAtViewportLocationLegacy):

Source/WebKitLegacy/mac:

* WebView/WebFrame.mm:
(-[WebFrame approximateNodeAtViewportLocation:]):


Canonical link: https://commits.webkit.org/213761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247541 268f45cc-cd09-0410-ab3c-d52691b4dbfc